# tau_cdma

./: CHANGELOG.md  LICENSE  README.md  benchmark_results.json  benchmarks.py  convergence_comparison.py  generate_all_paper_figures.py  generate_paper1_figures.py  generate_paper_figures.py  pyproject.toml  release_test.py  run_optimal_design.py  validation_output.txt
tau_cdma/: __init__.py  plotting.py
tau_cdma/core/: __init__.py  aliasing.py  cascade.py  emergent.py  erasure.py  fisher.py  gamp.py  interference.py  nmf.py  robust.py  shannon.py  simulate.py  spreading.py  vamp.py
tau_cdma/heavy_ion/: __init__.py  bethe_bloch.py  centrality.py  tof.py
tau_cdma/tau/: __init__.py  benchmark.py  ml_receiver.py  templates.py
tau_cdma/validate/: __init__.py  __main__.py  heavy_ion_predictions.py  prediction_criteria.py  tau_predictions_legacy.py
tests/: test_consistency.py  test_heavy_ion.py
