[project]
name = "tau-cdma"
version = "0.4.9"
description = "Fisher-information geometry diagnostics for template-based particle identification"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [
    {name = "Murat Ablai"},
]
keywords = [
    "particle identification",
    "Fisher information",
    "multiuser detection",
    "CDMA",
    "Cramér-Rao bound",
    "Poisson mixture model",
    "particle physics",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "scikit-learn>=1.2",
]

[project.optional-dependencies]
mc = ["pyhepmc", "pylhe"]
dev = ["pytest", "black", "ruff"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"
